優惠券controller, service整理